# hr_proresh

./: .env.sample  .gitignore  .gitlab-ci.yml  README.md  alembic.ini  pyproject.toml  pytest.ini
.github/workflows/: docker-image.yml
.run/: README.md  Run Docker Compose.run.xml
bruno/: README.md  bruno.json  collection.bru  prices-last.bru  prices.bru
docker/: .env.sample  Dockerfile  README.md  docker-compose.yml
docker/initdb/: 01_app_user.sql  02_app_database.sql  README.md
migrations/: env.py
migrations/versions/: 015377220b4c_create_db.py  015377220b4c_init.py  4b181879ea05_add_price_model.py  9731dcd3f907_add_price_model.py  e18de57e531e_add_price_model.py
src/: __init__.py  app.py  celery_app.py  celeryconfig.py  deribit.py  main.py  tasks.py  utils.py
src/deribit/: __init__.py  api.py  db.py  models.py  schema.py
tests/: test_app_api.py  test_deribit.py
