[project]
name = "hr-proresh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "celery[redis]>=5.6.2",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "redis>=6.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
