[project]
name = "hr-proresh"
version = "0.1.0"
description = "Тестовое задание"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "celery-types>=0.24.0",
    "celery[redis]>=5.6.2",
    "fastapi[standard]>=0.128.0",
    "flower>=2.0.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.45",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
